# VTVL_SIM

./: .gitignore  README.md  README_UPDATE_AUG_20th_4_20_AM  README_UPDATE_AUG_20th_4_20_AM.md
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.sh
install/sim/lib/sim/: pid_alt_controller  sim_dynamics
install/sim/share/ament_index/resource_index/package_run_dependencies/: sim
install/sim/share/ament_index/resource_index/parent_prefix_path/: sim
install/sim/share/sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/sim/share/sim/cmake/: simConfig-version.cmake  simConfig.cmake
install/sim/share/sim/environment/: ament_prefix_path.dsv  path.dsv
install/vtvl_msgs/include/vtvl_msgs/vtvl_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  vehicle_state.h  vehicle_state.hpp
install/vtvl_msgs/include/vtvl_msgs/vtvl_msgs/msg/detail/: vehicle_state__builder.hpp  vehicle_state__functions.h  vehicle_state__rosidl_typesupport_fastrtps_c.h  vehicle_state__rosidl_typesupport_fastrtps_cpp.hpp  vehicle_state__rosidl_typesupport_introspection_c.h  vehicle_state__rosidl_typesupport_introspection_cpp.hpp  vehicle_state__struct.h  vehicle_state__struct.hpp  vehicle_state__traits.hpp  vehicle_state__type_support.h  vehicle_state__type_support.hpp
install/vtvl_msgs/local/lib/python3.10/dist-packages/vtvl_msgs-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  (+1 more)
install/vtvl_msgs/share/ament_index/resource_index/package_run_dependencies/: vtvl_msgs
install/vtvl_msgs/share/ament_index/resource_index/parent_prefix_path/: vtvl_msgs
install/vtvl_msgs/share/ament_index/resource_index/rosidl_interfaces/: vtvl_msgs
install/vtvl_msgs/share/vtvl_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vtvl_msgs/share/vtvl_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_vtvl_msgs__rosidl_generator_cExport-noconfig.cmake  export_vtvl_msgs__rosidl_generator_pyExport.cmake  export_vtvl_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_vtvl_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_vtvl_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  vtvl_msgsConfig-version.cmake  vtvl_msgsConfig.cmake  vtvl_msgs__rosidl_typesupport_cExport-noconfig.cmake  vtvl_msgs__rosidl_typesupport_cExport.cmake  vtvl_msgs__rosidl_typesupport_cppExport-noconfig.cmake  vtvl_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  vtvl_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/vtvl_msgs/share/vtvl_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/vtvl_msgs/share/vtvl_msgs/msg/: VehicleState.idl  VehicleState.msg
log/: latest_build
rocket-sim/models/simple_rocket/: model.config  model.sdf
rocket-sim/src/sim/: CMakeLists.txt  package.xml
rocket-sim/src/sim/launch/: sim_3dof.launch.py  topic_based_sim_3dof.launch.py
rocket-sim/src/sim/scripts/: visualizer_node.py
rocket-sim/src/sim/src/: planar_controller.cpp  sim_dynamics.cpp
rocket-sim/src/vtvl_msgs/: CMakeLists.txt
rocket-sim/src/vtvl_msgs/msg/: ActuatorControls.msg  VehicleState.msg
rocket-sim/worlds/: basic_pad.world
src/sim/: package.xml
src/sim/src/: pid_alt_controller.cpp  sim_dynamics.cpp
src/vtvl_msgs/: CMakeLists.txt
(+7 files in other folders)
